// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="hotspots.congratulations"
>
  <div
    className="modal-head"
  >
    <h2
      className="huge text-normal text-success"
    >
      hotspots.congratulations
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <FormattedMessage
      defaultMessage="hotspots.successfully_changed_to_x"
      id="hotspots.successfully_changed_to_x"
      values={
        Object {
          "status_change": <strong>
            hotspots.successful_status_change_to_x.hotspots.status_option.FIXED
          </strong>,
          "status_label": "hotspots.status_option.FIXED",
        }
      }
    />
    <p
      className="spacer-top"
    >
      <FormattedMessage
        defaultMessage="hotspots.x_done_keep_going"
        id="hotspots.x_done_keep_going"
        values={
          Object {
            "percentage": <strong>
              
            </strong>,
          }
        }
      />
    </p>
  </div>
  <div
    className="modal-foot modal-foot-clear display-flex-center display-flex-space-between"
  >
    <ButtonLink
      onClick={[MockFunction]}
    >
      hotspots.see_x_hotspots.hotspots.status_option.FIXED
    </ButtonLink>
    <Button
      className="button-primary padded"
      onClick={[MockFunction]}
    >
      hotspots.continue_to_next_hotspot
    </Button>
  </div>
</Modal>
`;

exports[`should render correctly: opening hotspots again 1`] = `
<Modal
  contentLabel="hotspots.update.success"
>
  <div
    className="modal-head"
  >
    <h2
      className="huge text-normal"
    >
      hotspots.update.success
    </h2>
  </div>
  <div
    className="modal-body"
  >
    <FormattedMessage
      defaultMessage="hotspots.successfully_changed_to_x"
      id="hotspots.successfully_changed_to_x"
      values={
        Object {
          "status_change": <strong>
            hotspots.successful_status_change_to_x.hotspots.status_option.TO_REVIEW
          </strong>,
          "status_label": "hotspots.status_option.TO_REVIEW",
        }
      }
    />
  </div>
  <div
    className="modal-foot modal-foot-clear display-flex-center display-flex-space-between"
  >
    <ButtonLink
      onClick={[MockFunction]}
    >
      hotspots.see_x_hotspots.hotspots.status_option.TO_REVIEW
    </ButtonLink>
    <Button
      className="button-primary padded"
      onClick={[MockFunction]}
    >
      hotspots.continue_to_next_hotspot
    </Button>
  </div>
</Modal>
`;
